Web Inspector: Graphics: overview icon is not inverted in dark mode https://bugs.webkit.org/show_bug.cgi?id=283735
Reviewed by Tim Nguyen.

* Source/WebInspectorUI/UserInterface/Views/GraphicsTabContentView.css:
(@media (prefers-color-scheme: dark) .content-view.tab.graphics .navigation-bar > .item .canvas-overview .icon): Renamed from `@media (prefers-color-scheme: dark) .content-view.tab.graphics .navigation-bar > .item .graphics-overview .icon`.
This was likely a typo from 219987@main.

Canonical link: https://commits.webkit.org/287110@main

--- a/Source/WebInspectorUI/UserInterface/Views/GraphicsTabContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/GraphicsTabContentView.css
@@ -44,7 +44,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .content-view.tab.graphics .navigation-bar > .item .graphics-overview .icon {
+    .content-view.tab.graphics .navigation-bar > .item .canvas-overview .icon {
         filter: invert(60%);
     }
 
